Rework about page

--- a/about.html
+++ b/about.html
@@ -6,11 +6,16 @@ title: "About Metapolator"
 <section class="content about">
   <h1 class="big thin">Metapolator</h1>
 
-  <img src="/images/hello-world.jpg" alt="Hello World"
-    class="noclip" width="650" height="300" style="margin-bottom: 15px" />
-
   <p>
-    Metapolator is a remake of the Metaflop project. 
+    <img src="/images/hello-world.jpg" alt="Hello World"
+      class="noclip" width="650" height="300" style="margin-bottom: 15px" />
+  </p>
+  <p>
+    Metapolator is a remake of the 
+    <a href="http://metaflop.com">
+	  Metaflop
+	</a>
+	project, web based parametric font editor.
   </p>
 
 </section>
