Rework front page

--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@ title: "Posts"
 ---
 
 <section class="content">
+
+  <h1 class="thin">ABOUT</h1>
+
+    <p>
+	  Metapolator is a web based parametric font editor.
+    </p>
+
   <h1 class="thin">DOWNLOAD</h1>
 
     <p>
 	  Until a package is ready, get the 
 	  <a href="https://github.com/metapolator/metapolator">
 		source code from GitHub
-      </a>.
+      </a>
 	</p>
 	
-  <h1 class="thin">POSTS</h1>
+  <h1 class="thin">BLOG</h1>
   <ul class="listing">
     {% for post in site.posts %}
     <li>
