Use liquid template for page title in about page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: "About Metapolator"
 ---
 
 <section class="content about">
-  <h1 class="big thin">Metapolator</h1>
+  <h1 class="big thin">{% page.title %}</h1>
 
   <p>
     <img src="/images/hello-world.jpg" alt="Hello World"
