Correcting white spage in about page

--- a/about.html
+++ b/about.html
@@ -11,10 +11,7 @@ title: "About Metapolator"
       class="noclip" width="650" height="300" style="margin-bottom: 15px" />
   </p>
   <p>
-    Metapolator is a remake of the 
-    <a href="http://metaflop.com">
-	  Metaflop
-	</a>
+    Metapolator is a remake of the <a href="http://metaflop.com">Metaflop</a>
 	project, web based parametric font editor.
   </p>
 
