Updating first image

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: "About Metapolator"
   <h1 class="big thin">{{ page.title }}</h1>
 
   <p>
-    <img src="/images/hello-world.jpg" alt="Hello World"
+    <img src="/images/hello.png" alt="Hello World"
       class="noclip" width="650" height="300" style="margin-bottom: 15px" />
   </p>
   <p>
