--- a/about.html
+++ b/about.html
@@ -11,8 +11,7 @@ title: "About Metapolator"
       class="noclip" width="650" height="300" style="margin-bottom: 15px" />
   </p>
   <p>
-    Metapolator is a remake of the <a href="http://metaflop.com">Metaflop</a>
-	project, web based parametric font editor.
+    Metapolator is a new kind of a font editor.
   </p>
 
 </section>
