--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: "Posts"
   <h1 class="thin">ABOUT</h1>
 
     <p>
-	  Metapolator is a web based parametric font editor.
+	  Metapolator is a web based parametric font editor. <a href="/about">More</a>
     </p>
 
   <h1 class="thin">DOWNLOAD</h1>
