--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: "About Metapolator"
 
 <section class="content about">
   <h1 class="big thin">{{ page.title }}</h1>
-
+<div style="width:600px;">
   <p style="text-align:left;">
 Metapolator is a web-based parametric font editor. It provides a GUI for designing with Metafont – a program and language for semi-algorithmic specification of fonts. Metapolator was created out of the need to create large type families efficiently. 
 </p><p style="text-align:left;">
@@ -14,7 +14,7 @@ A Metafont is produced by specifying the central skeleton of shapes – for whic
 Metapolator can create a Metafont by parsing specially prepared UFO (Universal Font Object) files containing basic font outlines [1]. The fonts can be meta-designed within the Metapolator interface, for example, a curve needs to always connect to another stem, or the angle of a curve should end from 40° to 60° depending on the width of the glyph. Metapolator allows the designer to utilise Metafont without having to write any Metafont code. 
 </p><br>
 1: Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType) but they need to be broken up into separate shapes resembling strokes. Technically only on-curve anchor points are required – the off-curve control points are currently not read by Metapolator although these control points can be used by Metafont.
-
+</div>
 
   <p>
     <img src="/images/hello.png" alt="Hello World"
