Update about page

--- a/about.html
+++ b/about.html
@@ -5,6 +5,14 @@ title: "About Metapolator"
 
 <section class="content about">
   <h1 class="big thin">{{ page.title }}</h1>
+  
+    <p style="text-align:left;">
+<iframe src="http://player.vimeo.com/video/71826912" width="500" height="286" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  <p style="text-align:left;">
+<a href="http://vimeo.com/71826912">Metapolator Preview</a> from <a href="http://vimeo.com/user20005009">Metapolator</a> on <a href="https://vimeo.com">Vimeo</a>.
+  </p>
+  </p>
+  
 <div style="width:600px;">
   <p style="text-align:left;">
 Metapolator is a web-based parametric font editor. It provides a GUI for designing with Metafont – a program and language for semi-algorithmic specification of fonts. Metapolator was created out of the need to create large type families efficiently. 
@@ -12,11 +20,11 @@ Metapolator is a web-based parametric font editor. It provides a GUI for designi
 A Metafont is produced by specifying the central skeleton of shapes – for which there are "pens" of different angles and widths along the skeleton – rather than the outline of the shapes (with bezier curves for example). As the font shapes are defined through equations, they can be parameterised along axes such as aspect ratio, weight, slant, stroke width, contrast and so on. By defining the design space through parameters, Metafont does not simply design 'fonts' but entire families, hence meta-fonts.
 </p><p style="text-align:left;">
 Metapolator can create a Metafont by parsing specially prepared UFO (Universal Font Object) files containing basic font outlines [1]. The fonts can be meta-designed within the Metapolator interface, for example, a curve needs to always connect to another stem, or the angle of a curve should end from 40° to 60° depending on the width of the glyph. Metapolator allows the designer to utilise Metafont without having to write any Metafont code. 
-</p><br>
+</p>
 1: Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType) but they need to be broken up into separate shapes resembling strokes. Technically only on-curve anchor points are required – the off-curve control points are currently not read by Metapolator although these control points can be used by Metafont.
 </div>
 
-  <p>
+  <p style="text-align:left;">
     <img src="/images/hello.png" alt="Hello World"
       class="noclip" width="650" height="300" style="margin-bottom: 15px" />
   </p>
