--- a/about.html
+++ b/about.html
@@ -16,9 +16,16 @@ Metapolator can create a Metafont by parsing specially prepared UFO (Universal F
 1: Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType) but they need to be broken up into separate shapes resembling strokes. Technically only on-curve anchor points are required – the off-curve control points are currently not read by Metapolator although these control points can be used by Metafont.
 </div>
 
-  <p>
+  <p style="text-align:left;">
     <img src="/images/hello.png" alt="Hello World"
       class="noclip" width="650" height="300" style="margin-bottom: 15px" />
+  </p>
+
+  <p style="text-align:left;">
+<iframe src="http://player.vimeo.com/video/71826912" width="500" height="286" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+  <p style="text-align:left;">
+<a href="http://vimeo.com/71826912">Metapolator Preview</a> from <a href="http://vimeo.com/user20005009">Metapolator</a> on <a href="https://vimeo.com">Vimeo</a>.
+  </p>
   </p>
 
 </section>
