uploading parts of user's guide

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@ title: "Posts"
 	  Metapolator is a web based parametric font editor. <a href="/about">More</a>
     </p>
 
+  <h1 class="thin">User's Guide</h1>
+
+    <p>
+	  This short guide is provided as a walkthrough for using Metapolator... <a href="/tutorial">More</a>
+    </p>
+
+
   <h1 class="thin">DOWNLOAD</h1>
 
     <p>
