--- a/server/index.html
+++ b/server/index.html
@@ -7,8 +7,7 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </head>
 <body>
-    Point For Glyph: <input type="text" id="text">
-
+    <input type="text" id="text">
     <div class="well"></div>
 </body>
 
