--- a/server/index.html
+++ b/server/index.html
@@ -7,17 +7,14 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 </head>
 <body>
-    <input type="text" id="text">
+    <a href="javascript:;" value="get" class="label">show me the magic!</a>
     <div class="well"></div>
 </body>
 
 <script>
     var ws = new WebSocket('ws://localhost:8888/ws');
-    $('#text').keypress(function(e) {
-        if(e.which == 13) {
-            ws.send($(this).val());
-            $(this).val('');
-        }
+    $('.label').click(function(e) {
+        ws.send($(this).attr('value'));
     });
     ws.onmessage = function(ev) {
         $('.well').html($('.well').html() + '<br />' + ev.data);
