--- a/about.html
+++ b/about.html
@@ -4,26 +4,21 @@ title: "About Metapolator"
 ---
 
 <section class="content about">
-  <h1 class="big thin">{{ page.title }}</h1>
-  
-    <p style="text-align:left;">
-<iframe src="http://player.vimeo.com/video/71826912" width="500" height="286" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-  </p>
+<h1 class="big thin">{{ page.title }}</h1>
   
 <div style="width:600px;">
-  <p style="text-align:left;">
-Metapolator is a web-based parametric font editor. It provides a GUI for designing with Metafont – a program and language for semi-algorithmic specification of fonts. Metapolator was created out of the need to create large type families efficiently. 
+<p style="text-align:left;">
+Metapolator is a web-based parametric font editor. 
 </p><p style="text-align:left;">
-A Metafont is produced by specifying the central skeleton of shapes – for which there are "pens" of different angles and widths along the skeleton – rather than the outline of the shapes (with bezier curves for example). As the font shapes are defined through equations, they can be parameterised along axes such as aspect ratio, weight, slant, stroke width, contrast and so on. By defining the design space through parameters, Metafont does not simply design 'fonts' but entire families, hence meta-fonts.
+It provides a GUI for designing with UFO fonts and Metafont – a language for semi-algorithmic specification of typefaces. Metapolator was created out of the need to create large font families efficiently. 
 </p><p style="text-align:left;">
-Metapolator can create a Metafont by parsing specially prepared UFO (Universal Font Object) files containing basic font outlines [1]. The fonts can be meta-designed within the Metapolator interface, for example, a curve needs to always connect to another stem, or the angle of a curve should end from 40° to 60° depending on the width of the glyph. Metapolator allows the designer to utilise Metafont without having to write any Metafont code. 
-</p>
-1: Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType) but they need to be broken up into separate shapes resembling strokes. Technically only on-curve anchor points are required – the off-curve control points are currently not read by Metapolator although these control points can be used by Metafont.
-</div>
-
-  <p style="text-align:left;">
-    <img src="/images/hello.png" alt="Hello World"
-      class="noclip" width="650" height="300" style="margin-bottom: 15px" />
-  </p>
+For classical interpolation using multiple masters and axes, Metapolator can load normal UFO fonts (without any modifications) load and save into the UFO format and create new instances on the fly. 
+</p><p style="text-align:left;">
+To use the full potential of parameterizing fonts, Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType). 
+They need to be broken up into separate shapes resembling strokes and provide consistent counterpoints. In this process, a Metafont is produced by specifying the central skeleton of shapes – for which there are "pens" of different angles and widths along the skeleton. As the glyph shapes are defined through equations, they can be parameterised along axes such as aspect ratio, weight, slant, stroke width, contrast and so on. 
+</p><p style="text-align:left;">
+Furthermore instead of using prepared fonts it will be possible to enhance normal UFO fonts by adding parameters on request and only parameterize certain parts of a glyph.  
+</p><p style="text-align:left;">
+Metapolator allows the designer to utilise Metafont without have to write any Metafont code. 
 
 </section>
