--- a/about.html
+++ b/about.html
@@ -7,18 +7,18 @@ title: "About Metapolator"
 <h1 class="big thin">{{ page.title }}</h1>
   
 <div style="width:600px;">
+
 <p style="text-align:left;">
-Metapolator is a web-based parametric font editor. 
-</p><p style="text-align:left;">
-It provides a GUI for designing with UFO fonts and Metafont – a language for semi-algorithmic specification of typefaces. Metapolator was created out of the need to create large font families efficiently. 
-</p><p style="text-align:left;">
-For classical interpolation using multiple masters and axes, Metapolator can load normal UFO fonts (without any modifications) load and save into the UFO format and create new instances on the fly. 
-</p><p style="text-align:left;">
-To use the full potential of parameterizing fonts, Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType). 
-They need to be broken up into separate shapes resembling strokes and provide consistent counterpoints. In this process, a Metafont is produced by specifying the central skeleton of shapes – for which there are "pens" of different angles and widths along the skeleton. As the glyph shapes are defined through equations, they can be parameterised along axes such as aspect ratio, weight, slant, stroke width, contrast and so on. 
-</p><p style="text-align:left;">
-Furthermore instead of using prepared fonts it will be possible to enhance normal UFO fonts by adding parameters on request and only parameterize certain parts of a glyph.  
-</p><p style="text-align:left;">
-Metapolator allows the designer to utilise Metafont without have to write any Metafont code. 
+Metapolator is a web-based parametric font editor.
+<p style="text-align:left;">
+It provides a GUI for designing with UFO fonts and Metafont – a language for semi-algorithmic specification of typefaces. Metapolator was created out of the need to create large font families efficiently.
+<p style="text-align:left;">
+For classical interpolation using multiple masters and axes, Metapolator can load normal UFO fonts (without any modifications) load and save into the UFO format and create new instances on the fly.
+<p style="text-align:left;">
+To use the full potential of parametrising fonts, Metapolator can parse already existing fonts (such as PostScript Type 1 or OpenType). They need to be broken up into separate shapes resembling strokes and provide consistent counterpoints. In this process, a Metafont is produced by specifying the central skeleton of shapes – for which there are "pens" of different angles and widths along the skeleton. As the glyph shapes are defined through equations, they can be parametrised along axes such as aspect ratio, weight, slant, stroke width, contrast and so on.
+<p style="text-align:left;">
+Furthermore instead of using prepared fonts it will be possible to enhance normal UFO fonts by adding parameters on request and only parametrise certain parts of a glyph.
+<p style="text-align:left;">
+Metapolator allows the designer to utilise Metafont without have to write any Metafont code.
 
 </section>
