--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/slider.css"/>
+    <link rel="stylesheet" type="text/css" href="slider.css"/>
 
     <style>
         .slider {
